# demo-project

./: .dockerignore  .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  pyproject.toml
src/demo_setup/: config.py  dependency_container.py
src/demo_setup/interface/api/: main.py
src/tests/: conftest.py  test_api.py
