[tool.poetry]
name = "demo_setup"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
environs = "^9.3.5"
httpx = "^0.24.1"
typer = "^0.9.0"
rich = "^13.2.0"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
ipython = "^8.2.0"
pdbpp = "^0.10.3"
isort = "^5.10.1"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
skip = "migrations"

[tool.black]
line-length = 99
extend-exclude = '''
	 migrations
	|manage.py
	|asgi.py
	|wsgi.py
'''
